Second base page done

--- a/Mini Site/style.css
+++ b/Mini Site/style.css
@@ -21,6 +21,12 @@ body {
     color:rgb(185, 55, 93);
 }
 
+.tet {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .container-page {
     display: flex;
     align-items: center;
@@ -36,6 +42,7 @@ body {
     gap: 5%;
     width: 60%;
     margin: auto;
+    margin-left: 18%;
 }
 
 .text-container-left,
@@ -87,5 +94,6 @@ body {
 }
 
 .arrow {
-    
+    width: 10%;
+    margin-right: 5%;
 }
